K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: ravijha.work.gd                      #add your own domain if you have or else update etc/hosts with goaapp.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-app-service
                port:
                  number: 80
